# kava-varasto

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  SECURITY.md  TODO.md  env.example  manage.py  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  publish.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  client.js  cookies.js  inventory.js  loans.js
frontend/src/components/: ChangePasswordForm.jsx  EquipmentDetailModal.jsx  EquipmentFilterBar.jsx  LanguageSwitcher.jsx  Layout.jsx  LoginForm.jsx  OverdueIcon.jsx  ReturnedLoansTable.jsx
frontend/src/hooks/: useEquipmentFilter.js
frontend/src/i18n/: index.js
frontend/src/pages/: ChangePassword.jsx  Home.jsx  LoanArchive.jsx  LoanDetail.jsx  LoanList.jsx  LoanNew.jsx  LoanReturn.jsx  Storage.jsx
frontend/src/utils/: groupByCategory.js
locale/en/LC_MESSAGES/: django.po
locale/fi/LC_MESSAGES/: django.po
scripts/: subpath_dev.py
src/kava_varasto/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/kava_varasto/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/kava_varasto/inventory/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/kava_varasto/loans/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
templates/: spa.html
tests/: conftest.py  test_accounts_api.py  test_i18n.py  test_inventory_api.py  test_loans_api.py  test_spa.py  test_subpath.py
(+19 files in other folders)
