[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kava-varasto"
version = "0.1.0"
description = "Storage bookkeeping system for Karhunvartijat ry"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "Django>=5.2,<5.3",
    "django-environ>=0.11,<0.12",
    "gunicorn>=22,<27",
    "djangorestframework>=3.15,<3.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kava_varasto.settings.dev"
python_files = ["tests.py", "test_*.py"]
testpaths = ["src", "tests"]

[tool.ruff]
target-version = "py311"
